Fixed horizontal scrolls

--- a/scss/base/typography.scss
+++ b/scss/base/typography.scss
@@ -26,6 +26,8 @@ body {
       letter-spacing: 0.75rem;
       border: 3px solid $color-bluegreen-2;
       border-radius: 1rem;
+      animation-name: moveInLeft;
+      animation-duration: 3s;
 
       &__1 {
             background-image: linear-gradient(
@@ -122,8 +124,8 @@ body {
             display: block;
             font-size: 4rem;
             letter-spacing: 1.5rem;
-            //animation-name: moveInLeft;
-            //animation-duration: 3s;
+            animation-name: moveInLeft;
+            animation-duration: 3s;
 
             @include respond(phone) {
                   letter-spacing: 1rem;
@@ -137,8 +139,8 @@ body {
             font-size: 3rem;
             font-weight: 400;
             letter-spacing: 1.5rem;
-            //animation-name: moveInRight;
-            //animation-duration: 3s;
+            animation-name: moveInRight;
+            animation-duration: 3s;
             margin-bottom: 2rem;
 
             @include respond(phone) {
@@ -150,13 +152,13 @@ body {
             padding-top: 2rem;
             color: $color-cyanWhite;
             display: inline-block;
-            font-size: 3rem;
+            font-size: 2.8rem;
             font-weight: 400;
             letter-spacing: 1.3rem;
-            opacity: 1;
-            //animation-name: moveInRight;
-            //animation-delay: 0.5s;
-            //animation-duration: 3s;
+            opacity: 0;
+            animation-name: moveInRight;
+            animation-delay: 0.5s;
+            animation-duration: 3s;
             animation-fill-mode: forwards;
             @include respond(phone) {
                   letter-spacing: 0.8rem;
