--- a/scss/base/utilities.scss
+++ b/scss/base/utilities.scss
@@ -9,7 +9,7 @@
       left: 50.5%;
       transform: translate(-50%, -20%);
       text-align: center;
-      //width: 90%;
+      width: 75%;
 }
 
 .text-box-bottom {
@@ -18,7 +18,7 @@
       left: 51%;
       transform: translate(-50%, -90%);
       text-align: center;
-      //width: 90%;
+      width: 75%;
 }
 
 .margin-bottom-large {
