--- a/scss/pages/home.scss
+++ b/scss/pages/home.scss
@@ -1,5 +1,5 @@
 .section-header {
-      height: 95vh;
+      height: 98vh;
       width: auto;
       background-image: url(../img/bluebackground.jpg);
       background-size: cover;
@@ -12,7 +12,7 @@
 }
 
 .section-blender {
-      height: 7vh;
+      height: 5vh;
       width: auto;
       &__1 {
             background-image: linear-gradient(
